# teenygrad

./: .gitignore  .gitmodules  .teenygrad.code-workspace.swp  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build_deps.sh  mlir.out  setup_ubuntu  setup_ubuntu.sh  test_macro.rs
compiler/teeny-compiler/: Cargo.toml  rustc-ice-2025-09-29T08_57_16-72508.txt  rustc-ice-2025-09-29T09_32_10-80873.txt
compiler/teeny-compiler/src/: error.rs  errors.rs  lib.rs  target.rs
compiler/teeny-compiler/src/backend/: mod.rs
compiler/teeny-compiler/src/compiler/: mod.rs  target.rs
compiler/teeny-compiler/src/fxgraph/: dtype.rs  lang.rs  mod.rs  shape.rs
compiler/teeny-compiler/tests/: test_compiler.rs
compiler/teeny-compiler/tests/snapshots/: test_compiler__tensor_add_sm120.snap  test_compiler__tensor_add_sm90.snap.new  test_compiler__vector_add_sm90.snap  test_compiler__vector_add_sm90.snap.new
compiler/teeny-kernels/: Cargo.toml
compiler/teeny-kernels/src/: cross_entropy.rs  lib.rs  matmul.rs
compiler/teeny-kernels/src/attention/: flash_attention.rs  mod.rs
compiler/teeny-kernels/src/blocksparse/: matmul.rs  mod.rs  softmax.rs
compiler/teeny-llvm/: .gitignore  Cargo.toml  build.rs  wrapper.h
compiler/teeny-llvm/modules/teeny/: CMakeLists.txt
compiler/teeny-llvm/scripts/: build_llvm.sh  build_teeny.sh  build_triton.sh  build_tutorials.sh
compiler/teeny-llvm/src/: compiler.rs  error.rs  lib.rs  llvm.rs  module.rs
compiler/teeny-llvm/tests/: test_toy.rs  test_triton.rs
compiler/teeny-llvm/tests/toy/: toy.y
compiler/teeny-llvm/tutorials/: CMakeLists.txt
compiler/teeny-llvm/tutorials/mlir-tutorial/: CMakeLists.txt  README.md
compiler/teeny-macros/: Cargo.toml
compiler/teeny-macros/src/: lib.rs
compiler/teeny-macros/src/macros/: derive_jit.rs  expr.rs  jit_module.rs  kernel_macro.rs  mod.rs  proc_jit.rs  proc_kernel.rs
compiler/teeny-macros/tests/: test_kernel.rs
compiler/teeny-macros/tests/snapshots/: test_kernel__kernel_macro_snapshot.snap
compiler/teeny-runtime/: Cargo.toml
compiler/teeny-runtime/src/: device.rs  error.rs  lib.rs
compiler/teeny-runtime/src/compiler/: cpu.rs  cuda.rs  mod.rs
compiler/teeny-runtime/src/device/: cpu.rs  cuda.rs  mod.rs
compiler/teeny-runtime/src/tensor/: mod.rs
core/teeny-core/: Cargo.toml
core/teeny-core/src/: device.rs  dtype.rs  error.rs  errors.rs  lib.rs  macros.rs  storage.rs  types.rs  value.rs
core/teeny-core/src/compiler/: mod.rs
core/teeny-core/src/context/: buffer.rs  device.rs  mod.rs  program.rs
core/teeny-core/src/device/: context.rs  mod.rs  program.rs
core/teeny-core/src/dtype/: mod.rs
core/teeny-core/src/fxgraph/: analysis.rs  cat.rs  device.rs  dtype.rs  keyvalue.rs  lang.rs  literal.rs  mod.rs  node.rs  placeholder.rs  shape.rs  tensor.rs  types.rs  value.rs
core/teeny-core/src/graph/: compiler.rs  mod.rs  node_ref.rs  shape.rs  tensor.rs
core/teeny-core/src/model/: mod.rs
core/teeny-core/src/nn/: batchnorm.rs  conv1d.rs  conv2d.rs  conv3d.rs  embedding.rs  flatten.rs  graph.rs  groupnorm.rs  instancenorm.rs  layernorm.rs  linear.rs  macros.rs  mod.rs  module.rs  pad.rs  param.rs  pool.rs  rmsnorm.rs  sequential.rs
core/teeny-core/src/num/: bf16.rs  mod.rs  usize.rs
core/teeny-core/src/runtime/: mod.rs
core/teeny-core/src/safetensors/: mod.rs
core/teeny-core/src/tensor/: autodiff.md  example.rs  mod.rs  num.rs  shape.rs  tensor_add.rs  tensor_mult.rs  tensor_ops.rs  (+1 more)
drivers/teeny-cuda/: Cargo.toml  build.rs  wrapper.h
drivers/teeny-cuda/src/: buffer.rs  context.rs  cuda.rs  device.rs  driver.rs  error.rs  errors.rs  lib.rs  program.rs  target.rs  testing.rs
drivers/teeny-cuda/tests/: test_tensor_add.rs  test_vector_add.rs
interop/teeny-torch/python/: LICENSE  README.md  pyproject.toml  setup.cfg
kernels/teeny-kernels/: Cargo.toml  README.md
kernels/teeny-kernels/src/: cross_entropy.rs  errors.rs  lib.rs  matmul.rs
kernels/teeny-kernels/tests/: test_avgpool1d.rs  test_avgpool2d.rs  test_avgpool3d.rs  test_batchnorm.rs  test_channel_cat.rs  test_channel_chunk.rs  test_circular_pad1d.rs  test_circular_pad2d.rs  test_circular_pad3d.rs  test_constant_pad1d.rs  test_constant_pad2d.rs  test_constant_pad3d.rs  test_conv1d.rs  test_conv2d.rs  test_conv3d.rs  test_elu.rs  test_flash_attn2.rs  test_flatten.rs  test_gelu.rs  test_groupnorm.rs  test_hard_acts.rs  test_instancenorm.rs  test_layernorm.rs  test_linear.rs  test_loss_bce.rs  test_loss_elementwise.rs  test_loss_embedding.rs  test_loss_nll.rs  test_loss_ranking.rs  test_lppool1d.rs  test_lppool2d.rs  test_lppool3d.rs  test_maxpool1d.rs  test_maxpool2d.rs  test_maxpool3d.rs  test_misc_acts.rs  test_optim_adagrad.rs  test_optim_adam.rs  test_optim_adamax.rs  test_optim_asgd.rs  (+20 more)
kernels/teeny-triton/: Cargo.toml  build.rs  libtypes.rlib
kernels/teeny-triton/src/: error.rs  lib.rs  triton1.rs  triton_lang.rs
kernels/teeny-triton/tests/: test_kitche_sink.rs  test_kitchen_sink.rs
models/teeny-hf/: Cargo.toml  README.md
models/teeny-hf/src/: error.rs  lib.rs  main.rs
models/teeny-llama/: Cargo.toml  build.rs
models/teeny-llama/src/: lib.rs  main.rs
models/teeny-qwen/: Cargo.toml
models/teeny-qwen/src/: lib.rs  main.rs
models/teeny-samples/: Cargo.toml
models/teeny-samples/src/: error.rs  ex01_vector_add.rs  ex02_simple_classifier.rs  lib.rs  main.rs  simple_classifier.rs
models/teeny-vision/: Cargo.toml
models/teeny-vision/examples/: autograd_debug.rs  mnist.rs
models/teeny-vision/src/: errors.rs  lib.rs  mnist.rs
models/teeny-vision/tests/: test_mnist_compile.rs
support/teeny-torch/: Cargo.toml  graph.fbs
support/teeny-torch/src/: error.rs  torch.rs
teeny-demo/teeny-mnist/: Cargo.toml
teeny-demo/teeny-mnist/src/: main.rs  mnist.rs  model.rs
torch/teeny-torch/: Cargo.toml  build.rs  fix_imports.py  graph.fbs  pyproject.toml
torch/teeny-torch/python/: .gitignore  setup.cfg
torch/teeny-torch/src/: error.rs  fxgraph.rs  graph.rs  lib.rs  torch.rs
utilities/teeny-data/: Cargo.toml
utilities/teeny-data/src/: error.rs  lib.rs
(+1096 files in other folders)
