[workspace]
resolver = "3"
members = [ "core/*", "compiler/*", "models/*", "support/*", "drivers/*", "torch/*", "utilities/*", "apps/*"]

[workspace.dependencies]
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
protoc-bin-vendored = "3.2.0" 
syn = { version = "2.0.105", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.97"
tokio = { version = "1.47.1", features = ["full"] }
smol = { version = "2.0.2" }
fancy-regex = "0.16.1"
rustc-hash = "2.1.1"
regex = "1.11.1"
bstr = "1.12.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.99"
thiserror = "2.0.14"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
minijinja = "2.11.0"
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }
tokenizers = "0.21.4"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
csv = "1.3.1"
once_cell = "1.21.3"
rand = { version = "0.9.2", features = ["std"] }
derive_builder = "0.20.2"
uuid = { version = "1.18.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
cargo_metadata = "0.21.0"
bindgen = "0.72.0"
cfgrammar = "0.13.10"
lrlex = "0.13.10"
lrpar = "0.13.10"
rayon = "1.11.0"
half = "2.6.0"
target-triple = "0.1.4"
cpuid = "0.1.1"
num-traits = "0.2.19"
derive_more = { version = "2.0.1", features = ["full"] }
ksuid = "0.2.0"
insta = "1.43.1"
indicatif = "0.18.0"
safetensors = "0.6.2"
memmap2 = "0.9.7"
flatbuffers = "25.2.10"
flatc-rust = "0.2.0"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pyo3-build-config = "0.25.1"
egg = "0.10.0"
flate2 = "1.1.2"