[workspace]
resolver = "3"
members = [ 
  "core/*", 
  "kernels/*", 
  "macros/*", 
  "models/*", 
  "support/*", 
  "drivers/*", 
  "utilities/*", 
  "apps/*",
  "compiler/*"]
exclude = ["core/teeny-core-orig"]

[workspace.dependencies]
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
protoc-bin-vendored = "3.2.0" 
syn = { version = "2.0.111", features = ["full"] }
quote = "1.0.42"
proc-macro2 = "1.0.103"
tokio = { version = "1.52.1", features = ["full"] }
smol = { version = "2.0.2" }
fancy-regex = "0.17.0"
rustc-hash = "2.1.2"
regex = "1.12.2"
bstr = "1.12.1"
sha2 = { version = "0.11.0", default-features = false }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = { version = "1.0.100", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
chrono = "0.4.41"
clap = { version = "4.5.53", features = ["derive"] }
minijinja = "2.13.0"
minijinja-contrib = { version = "2.13.0", features = ["pycompat"] }
tokenizers = "0.22.2"
ndarray = "0.17.1"
ndarray-rand = "0.16.0"
csv = "1.4.0"
once_cell = "1.21.3"
rand = { version = "0.10.1", features = ["std"] }
derive_builder = "0.20.2"
uuid = { version = "1.19.0", features = ["v4"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
cargo_metadata = "0.23.1"
bindgen = "0.72.1"
cfgrammar = "0.14.0"
lrlex = "0.14.0"
lrpar = "0.14.0"
rayon = "1.11.0"
half = "2.7.1"
target-triple = "1.0.0"
cpuid = "0.1.1"
num-traits = "0.2.19"
derive_more = { version = "2.1.0", features = ["full"] }
ksuid = "0.2.0"
insta = "1.47.2"
indicatif = "0.18.3"
safetensors = "0.7.0"
memmap2 = "0.9.9"
flatbuffers = "25.12.19"
flatc-rust = "0.2.0"
# Force nightly feature so hashbrown 0.16 builds on nightly (allocator_api). Required by safetensors/indexmap.
# hashbrown = { version = "0.16.1", features = ["nightly"] }
pyo3 = { version = "0.28.3", features = ["extension-module"] }
pyo3-build-config = "0.28.3"
egg = "0.11.0"
flate2 = "1.1.9"
ordered-float = "5.3.0"
z3 = { path = "../z3.rs/z3" }
dotenv = "0.15.0"

