[package]
name = "teeny-compiler"
version = "0.1.0"
edition = "2024"

[features]
default = ["cpu", "ndarray", "cuda"]
cpu = ["teeny-cpu"]
cuda = ["teeny-cuda"]

[dependencies]
teeny-core = { path = "../../core/teeny-core" }
teeny-triton = { path = "../../kernels/teeny-triton" }
teeny-cpu = { path = "../../drivers/teeny-cpu", optional = true }
teeny-cuda = { path = "../../drivers/teeny-cuda", optional = true }
rustc_driver = { path = "../rustx/compiler/rustc_driver" }
ndarray = { workspace = true, optional = true }
thiserror.workspace = true
anyhow.workspace = true
derive_more.workspace = true
syn.workspace = true
proc-macro2.workspace = true
egg.workspace = true
z3.workspace = true

[dev-dependencies]
teeny-kernels = { path = "../../kernels/teeny-kernels" }