[package]
name = "teeny-compiler"
version = "0.1.0"
edition = "2024"

[features]
default = ["ndarray", "cuda"]
cuda = ["teeny-cuda"]

[dependencies]
teeny-core = { path = "../../core/teeny-core" }
teeny-triton = { path = "../../kernels/teeny-triton" }
teeny-cuda = { path = "../../drivers/teeny-cuda", optional = true }
ndarray = { workspace = true, optional = true }
thiserror.workspace = true
anyhow.workspace = true
derive_more.workspace = true
syn.workspace = true
proc-macro2.workspace = true
egg.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true

[dev-dependencies]
teeny-kernels = { path = "../../kernels/teeny-kernels" }
insta.workspace = true
dotenv.workspace = true