[package]
name = "teeny-compiler"
version = "0.1.0"
edition = "2024"

[features]
default = ["ndarray"]

[dependencies]
teeny-core = { path = "../../core/teeny-core" }
teeny-triton = { path = "../../kernels/teeny-triton" }
ndarray = { workspace = true, optional = true }
thiserror.workspace = true
anyhow.workspace = true
derive_more.workspace = true
syn.workspace = true
proc-macro2.workspace = true
egg.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true

[dev-dependencies]
teeny-kernels = { path = "../../kernels/teeny-kernels" }
insta.workspace = true
dotenv.workspace = true