[package]
name = "teeny-kernels"
version = "0.1.0"
edition = "2024"
description = "Triton based kernels for the Teenygrad project"
repository = "https://github.com/teenygrad/teeny-kernels"
license = "GPL v3"

[lib]

[dependencies]
teeny-macros = { path = "../teeny-macros" }
teeny-triton = { path = "../teeny-triton" }
teeny-core = { path = "../../core/teeny-core" }
teeny-torch = { path = "../../interop/teeny-torch" }