[package]
name = "teeny-llvm"
version = "0.1.0"
edition = "2024"
description = "Rust bindings for LLVM/Triton"
repository = "https://github.com/teenygrad/teeny-llvm"
license = "GPL v3"

[lib]
name = "teeny_llvm"

[features]
default = ["cuda"]
cuda = []

[dependencies]

[build-dependencies]
cargo_metadata.workspace = true
bindgen.workspace = true
cfgrammar.workspace = true
lrlex.workspace = true
lrpar.workspace = true

[dev-dependencies]
cfgrammar.workspace = true
lrlex.workspace = true
lrpar.workspace = true