[package]
name = "teeny-llvm"
version = "0.1.0"
edition = "2024"
description = "Rust based compiler for Teenygrad using LLVM/MLIR/Triton"
repository = "https://github.com/teenygrad/teeny-llvm"
license = "GPL v3"

[lib]
name = "teeny_llvm"

[features]
default = ["ndarray", "cuda"]
cpu = []
cuda = []

[dependencies]
thiserror.workspace = true
derive_more.workspace = true
ndarray = { workspace = true, optional = true }

[build-dependencies]
cargo_metadata.workspace = true
bindgen.workspace = true
cfgrammar.workspace = true
lrlex.workspace = true
lrpar.workspace = true

[dev-dependencies]
cfgrammar.workspace = true
lrlex.workspace = true
lrpar.workspace = true