[package]
name = "teeny-macros"
version = "0.1.0"
edition = "2021"
description = "Macros for the Teenygrad project"
repository = "https://github.com/teenygrad/teeny-macros"
license = "GPL v3"

[lib]
proc-macro = true

[dependencies]
teeny-triton = { path = "../teeny-triton" }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
insta = "1.43.1"
