[package]
name = "teeny-macros"
version = "0.1.0"
edition = "2021"
description = "Macros for the Teenygrad project"
repository = "https://github.com/teenygrad/teeny-macros"
license = "GPL v3"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
insta.workspace = true
quote.workspace = true
proc-macro2.workspace = true
trybuild = "1.0"

