[package]
name = "teeny-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = ["cpu", "cuda", "compiler"]
cuda = ["teeny-cuda"]
cpu = ["teeny-cpu"]
compiler = ["teeny-compiler"]

[dependencies]
teeny-core = { path = "../../core/teeny-core" }
teeny-compiler = { path = "../teeny-compiler", optional = true }
teeny-cuda = { path = "../../drivers/teeny-cuda", optional = true }
teeny-cpu = { path = "../../drivers/teeny-cpu", optional = true }
once_cell.workspace = true
thiserror.workspace = true
anyhow.workspace = true