[package]
name = "teeny-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = ["cuda", "compiler"]
cuda = ["teeny-cuda"]
compiler = ["teeny-compiler"]

[dependencies]
teeny-core = { path = "../../core/teeny-core" }
teeny-compiler = { path = "../teeny-compiler", optional = true }
teeny-cuda = { path = "../../drivers/teeny-cuda", optional = true }
once_cell.workspace = true
thiserror.workspace = true
anyhow.workspace = true