[package]
name = "teeny-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["training"]
training = []

[dependencies]
teeny-macros = { path = "../../compiler/teeny-macros" }
thiserror.workspace = true
once_cell.workspace = true
rand.workspace = true
derive_builder.workspace = true
uuid.workspace = true
half.workspace = true
num-traits.workspace = true
ksuid.workspace = true
