[package]
name = "teeny-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["training", "ndarray"]
training = []
ndarray = ["dep:ndarray"]

[dependencies]
teeny-macros = { path = "../../compiler/teeny-macros" }
ndarray= { workspace = true, optional = true }
thiserror.workspace = true
once_cell.workspace = true
rand.workspace = true
derive_builder.workspace = true
uuid.workspace = true
half.workspace = true
num-traits.workspace = true
ksuid.workspace = true
serde.workspace = true
derive_more.workspace = true
safetensors.workspace = true