[package]
name = "teeny-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["training", "ndarray", "compiler"]
ndarray = ["dep:ndarray"]
training = []
compiler = [ "egg", "z3" ]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
once_cell.workspace = true
rand.workspace = true
derive_builder.workspace = true
uuid.workspace = true
half.workspace = true
num-traits.workspace = true
ksuid.workspace = true
serde.workspace = true
derive_more.workspace = true
safetensors.workspace = true
ordered-float.workspace = true

ndarray = { workspace = true, optional = true }
egg = { workspace = true, optional = true }
z3 = { workspace = true, optional = true }