[package]
name = "teeny-cuda"
version = "0.1.0"
edition = "2024"

[features]
default = []

[lib]

[dependencies]
teeny-core = { path = "../../core/teeny-core" }
thiserror.workspace = true
anyhow.workspace = true
derive_more.workspace = true
derive_builder.workspace = true

[dev-dependencies]
teeny-compiler = { path = "../../compiler/teeny-compiler" }
teeny-kernels = { path = "../../kernels/teeny-kernels" }
dotenv.workspace = true

[build-dependencies]
bindgen.workspace = true
