[package]
name = "teeny-kernels"
version = "0.1.0"
edition = "2024"
description = "Triton based kernels for the Teenygrad project"
repository = "https://github.com/teenygrad/teeny-kernels"
license = "GPL v3"

[lib]

[features]
default = ["cuda", "training"]
cuda = ["dep:teeny-cuda"]
training = ["teeny-core/training"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
teeny-macros = { path = "../../macros/teeny-macros" }
teeny-core = { path = "../../core/teeny-core" }
teeny-triton = { path = "../teeny-triton" }
teeny-cuda = { path = "../../drivers/teeny-cuda", optional = true }

[dev-dependencies]
teeny-compiler = { path = "../../compiler/teeny-compiler" }
dotenv.workspace = true
insta.workspace = true