[package]
name = "teeny-triton"
version = "0.1.0"
edition = "2024"

[dependencies]
teeny-core = { path = "../../core/teeny-core" }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
dotenv.workspace = true
thiserror.workspace = true
anyhow.workspace = true
teeny-core = { path = "../../core/teeny-core" }
teeny-compiler = { path = "../../compiler/teeny-compiler" }
teeny-macros = { path = "../../macros/teeny-macros" }
teeny-cuda = { path = "../../drivers/teeny-cuda" }

[build-dependencies]
cargo_metadata.workspace = true
