[package]
name = "teeny-hf"
version = "0.1.0"
edition = "2024"

[lib]
name = "teeny_hf"
path = "src/lib.rs"

[[bin]]
name = "hf"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
clap.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
tokenizers.workspace = true
teeny-core = { path = "../../core/teeny-core" }
teeny-nlp = { path = "../../utilities/teeny-nlp" }
teeny-data = { path = "../../utilities/teeny-data" }
teeny-torch = { path = "../../interop/teeny-torch" }
teeny-triton = { path = "../../compiler/teeny-triton" }