[package]
name = "teeny-hf"
version = "0.1.0"
edition = "2024"

[lib]
name = "teeny_hf"
path = "src/lib.rs"

[[bin]]
name = "thf"
path = "src/main.rs"

[dependencies]
teeny-core = { path = "../../core/teeny-core" }
teeny-nlp = { path = "../../utilities/teeny-nlp" }
teeny-data = { path = "../../utilities/teeny-data" }
teeny-torch = { path = "../../torch/teeny-torch" }
teeny-triton = { path = "../../compiler/teeny-triton" }
teeny-cache = { path = "../../utilities/teeny-cache" }
teeny-http = { path = "../../utilities/teeny-http" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
clap.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
tokenizers.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
derive_builder.workspace = true
ndarray.workspace = true
safetensors.workspace = true