[package]
name = "teeny-llama"
version = "0.1.0"
edition = "2024"

[lib]
name = "teeny_llama"
path = "src/lib.rs"

[[bin]]
name = "llama"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
teeny-llvm = { path = "../../compiler/teeny-llvm" }
teeny-nlp = { path = "../../utilities/teeny-nlp" }
teeny-data = { path = "../../utilities/teeny-data" }