[package]
name = "teeny-samples"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "teeny_samples"
path = "src/main.rs"

[lib]
name = "teeny_samples"
path = "src/lib.rs"

[features]
default = ["cuda"]
cuda = ["teeny-cuda"]

[dependencies]
clap.workspace = true
tokio.workspace = true
ndarray.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
teeny-core = { path = "../../core/teeny-core" }
teeny-data = { path = "../../utilities/teeny-data" }
teeny-driver = { path = "../../drivers/teeny-driver" }
teeny-cuda = { path = "../../drivers/teeny-cuda", optional = true }