[package]
name = "teeny-samples"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "teeny_samples"
path = "src/main.rs"

[lib]
name = "teeny_samples"
path = "src/lib.rs"

[dependencies]
teeny-core = { path = "../../core/teeny-core" }
teeny-data = { path = "../../utilities/teeny-data" }
teeny-runtime = { path = "../../compiler/teeny-runtime" }
teeny-macros = { path = "../../compiler/teeny-macros" }
teeny-jit = { path = "../../compiler/teeny-jit" }
clap.workspace = true
tokio.workspace = true
ndarray.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
