[package]
name = "teeny-torch"
version = "0.1.0"
edition = "2024"

[lib]
name = "teenygrad"
crate-type = ["cdylib"]

[dependencies]
teeny-core = { path = "../../core/teeny-core" }
teeny-compiler = { path = "../../compiler/teeny-compiler" }
thiserror.workspace = true
pyo3.workspace = true
flatbuffers.workspace = true
regex.workspace = true
egg.workspace = true

[dev-dependencies]
flate2.workspace = true

[build-dependencies]
flatc-rust.workspace = true
cargo_metadata.workspace = true
pyo3-build-config.workspace = true
