[package]
name = "teeny-mnist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
smol.workspace = true
clap.workspace = true
flate2.workspace = true
half.workspace = true
# teenygrad dependencies
teeny-tensor.workspace = true
teeny-data.workspace = true
teeny-nn.workspace = true
teeny-util.workspace = true