[build-system]
requires = ["setuptools>=61.0", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "teenygrad"
version = "0.1.0"
description = "Teenygrad JIT compiler."
authors = [
    { name="Arshad M", email="arshadm@teenygrad.org" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "../LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.6.0",
    "flatbuffers>=25.2.10",
    "pybind11>=3.0.0",
]

[tool.setuptools.packages]
find = { where = ["python"] }

[[tool.setuptools-rust.ext-modules]]
target = "teenygrad.teenygrad"

[tool.pylint.messages_control]
disable = ["C0301"]

[tool.flake8]
max-line-length = 999