[package]
name = "teeny-data"
version = "0.1.0"
edition = "2024"

[dependencies]
teeny-core = { path = "../../core/teeny-core" }
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
ndarray.workspace = true
csv.workspace = true
safetensors.workspace = true
memmap2.workspace = true