[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teenygrad"
version = "0.1.0"
description = "Teenygrad JIT compiler."
authors = [
    { name="Arshad M", email="arshadm@teenygrad.org" },
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "../LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [] 