[metadata]
name = teenygrad
version = 0.1.0
description = Teenygrad JIT compiler.
long_description = file: README.md
long_description_content_type = text/markdown
author = Arshad M
author_email = arshadm@teenygrad.org
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0-or-later
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7 