[metadata]
name = teenygrad
Metadata-Version: 2.4
description = Teenygrad JIT compiler.
long_description = file: README.md
long_description_content_type = text/markdown
author = Arshad M
author_email = arshadm@teenygrad.org
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7 